Following reviewver comments